contrast fix

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -2,7 +2,7 @@
 
 :root {
     --dark-1: rgba(11, 32, 39, 1);
-    --dark-2: rgba(64, 121, 140, 1);
+    --dark-2: rgb(53, 100, 116);
     --accent-1: rgba(112, 169, 161, 1);
     --light-1: rgba(246, 241, 209, 1); 
     --light-2: rgba(207, 215, 199, 1);
@@ -141,7 +141,7 @@ nav a:visited {
 }
 .cell-8 {
     background-color: var(--dark-2);    
-    color: var(--light-1);
+    color: #ffffff;
 }
 .cell-9 {
     background-color: var(--accent-1);    
